Add api method to set client connection
